# Blazescension2

./: .gitignore  AGENTS.md
BlazescensionOverlay/: AGENTS.md  CMakeLists.txt  README.md
BlazescensionOverlay/docs/: MEMORY_MAP.md
BlazescensionOverlay/src/: main.cpp
BlazescensionOverlay/src/App/: Application.cpp  Application.h
BlazescensionOverlay/src/Core/: AppConfig.h  Math.cpp  Math.h  Types.h
BlazescensionOverlay/src/Memory/: GameReader.cpp  GameReader.h  Offsets.h  ProcessMemory.cpp  ProcessMemory.h
BlazescensionOverlay/src/Overlay/: OverlayWindow.cpp  OverlayWindow.h  WindowTracker.cpp  WindowTracker.h
BlazescensionOverlay/src/Rendering/: Projection.cpp  Projection.h  SceneRenderer.cpp  SceneRenderer.h
BlazescensionOverlay/src/UI/: Menu.cpp  Menu.h
PlayerInfoOverlay/: CMakeLists.txt  README.md  imgui.ini
PlayerInfoOverlay/src/: GameReader.cpp  GameReader.h  Offsets.h  main.cpp  probe.cpp
